Class Exercise 04/style.css
* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}
body {
    font-family: 'Poppins', sans-serif;
}
.container {
    max-width: 1300px;
    margin: 0 auto;
}
.services {
    background-color: #F2561D;
    padding: 5rem 2rem;
}
.services-section {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    gap: 1rem;
}
.services-section div {
    flex: 1 1 15rem;
}
.services-section span {
    display: inline-block;
    font-size: 1.3rem;
    text-transform: uppercase;
    margin-bottom: .35rem;
}
.services-heading {
    font-size: 2.8rem;
    line-height: 1.3;
}
.services-copy {
    font-size: 1.1rem;
    line-height: 1.7;
    padding-top: 2rem;
}
.underline {
    width: 20%;
    height: .4rem;
    background-color: rgb(255, 255, 255);
    margin: 1rem 0;
}
.main-btn {
    border: none;
    border-radius: 50rem;
    padding: .95rem 2rem;
    font-weight: 600;
    text-transform: uppercase;
    font-size: .75rem;
    margin-top: 1rem;
    letter-spacing: .1rem;
    cursor: pointer;
    transition: all 200ms ease;
}
.main-btn:hover {
    transform: translateY(-5px);
    filter: drop-shadow(0 5px 10px rgba(14, 13, 13, 0.2));
}
.cards-section {
    padding-top: 3rem;
    display: flex;
    gap: 1rem;
    width: 100%;
    flex-wrap: wrap;
}
.card {
    flex: 1 1 20rem;
    text-align: center;
    background-color: rgb(22, 21, 21);
    color: white;
    padding: 1.2rem;
}
.card > * {
    padding-bottom: 1rem;
}
.card img {
    width: 100%;
    height: 25rem;
    object-fit: cover;
}
.card h4 {
    font-size: 1.5rem;
    margin: 1rem 0;
}
.card p {
    line-height: 1.7;
}
#pop-up-modal {
    display: none;
    justify-content: center;
    align-items: center;
    position: fixed;
    z-index: 10;
    width: 100vw;
    height: 100vh;
    background-color: rgba(255, 255, 255, 0.9);
    top: 50%;
    left: 50%;
    transform: translate(-50%,-50%);
    color: white;
}
#pop-up-modal form {
    display: flex;
    flex-direction: column;
    width: clamp(30rem, 50vw, 40rem);
    background-color: #F2561D;
    padding: 2rem;
    position: relative;
    z-index: 2;
}
#pop-up-modal form div{
    display: flex;
    flex-direction: column;
}
#pop-up-modal form > * {
    margin-bottom: 1.2rem;
}
#pop-up-modal form h4 {
    font-size: 2.5rem;
    font-weight: 600;
}
label {
    margin-bottom: .3rem;
    font-size: 1.2rem;
}
input {
    height: 2.3rem;
    padding: .5rem;
    font-size: 1rem;
    outline: none;
    border: none;
}
#message {
    height: 10rem;
    font-family: 'Poppins',sans-serif;
    padding: .5rem;
    font-size: 1rem;
    resize: none;
    outline: none;
    border: none;
}
#send-btn {
    padding: .5rem;
    height: 2.8rem;
    background-color: #111110;
    font-size: 1.1rem;
    border: none;
    color: white;
    cursor: pointer;
}
#close-btn {
    position: absolute;
    top: 5%;
    right: 5%;
    font-weight: 600;
    font-size: 1.4rem;
    color: black;
    background: transparent;
    border: none;
    cursor: pointer;
}
.close-modal-bg {
    width: 100%;
    height: 100%;
    position: absolute;
    z-index: 1;
}

